# lzdeploy

./: .gitignore  CMakeLists.txt
src/: ftypes.h  main.cpp  utils.cpp  utils.h
